Fix draw-btn-alt on small resolution

--- a/src/frontend/scss/main.scss
+++ b/src/frontend/scss/main.scss
@@ -234,7 +234,7 @@ footer
 	}
 }
 
-@media(max-width: 350px)
+@media(max-width: 360px)
 {
 	a.draw-btn-alt
 	{
